--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,9 @@ jobs:
     - run: if [ -z "${NODE_ENV:-}" ]; then export NODE_ENV=test; fi
     - run: export PATH="~/GovLab/data-collaboratives/node_modules/.bin:$PATH"
     - run: npm install
-    - run: gulp deploy
+    - run:
+        working_directory: ~/GovLab/data-collaboratives
+        command: gulp deploy
     - run: echo -e "export RAILS_ENV=test\nexport RACK_ENV=test" >> $BASH_ENV
     - run: 'bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3 '
     - save_cache:
