--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
     - run: npm install
     - run:
         working_directory: ~/GovLab/data-collaboratives
-        command: gulp deploy
+        command: './node_modules/.bin/gulp deploy'
     - run: echo -e "export RAILS_ENV=test\nexport RACK_ENV=test" >> $BASH_ENV
     - run: 'bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3 '
     - save_cache:
