list git config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,8 @@ jobs:
     - run: gem install bundler
     - run: if [ -z "${NODE_ENV:-}" ]; then export NODE_ENV=test; fi
     - run: export PATH="~/GovLab/data-collaboratives/node_modules/.bin:$PATH"
+    - run: 'echo list global config && git config --global -l'
+    - run: 'echo list local config && git config -l'
     - run: git config --global user.name mocxd
     - run: git config user.name mocxd
     - run: npm install
