--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "devDependencies": {
     "browser-sync": "^2.13.0",
     "child_process": "^1.0.2",
-    "gulp": "^3.9.1",
-    "gulp-gh-pages": "^0.5.4",
+    "gulp": "^4.0.2",
+    "gulp-gh-pages": "^0.6.0-6",
     "gulp-imagemin": "^3.0.1",
     "gulp-shell": "^0.5.2",
     "gulp-util": "^3.0.7",
