--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "devDependencies": {
     "child_process": "^1.0.2",
     "gulp": "^4.0.2",
-    "gulp-gh-pages": "^0.6.0-6",
+    "gulp-gh-pages-gift": "^0.5.5",
     "gulp-imagemin": "^3.0.1",
     "gulp-shell": "^0.5.2",
     "gulp-util": "^3.0.7",
     "run-sequence": "^1.2.2"
-  }
+  },
+  "dependencies": {}
 }
